log
Thu 16 May 2024 03:12:38 PM UTC: 
 tests:  0|5
total_score: 0/70
ab9d57e
Thu 16 May 2024 03:45:21 PM UTC: 
 sudoku.c | 25 +++++++++++++++++++++++++
 1 file changed, 25 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:47:11: error: unused variable ‘k’ [-Werror=unused-variable]
   47 |   int i,j,k;
      |           ^
cc1: all warnings being treated as errors
Compilation failed
ba9daa4
Thu 16 May 2024 03:45:58 PM UTC: 
 sudoku.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:47:11: error: unused variable ‘k’ [-Werror=unused-variable]
   47 |   int i,j,k;
      |           ^
cc1: all warnings being treated as errors
Compilation failed
4088a67
Thu 16 May 2024 03:46:06 PM UTC: 
 sudoku.c | 10 ----------
 1 file changed, 10 deletions(-)
 tests:  2|4
total_score: 15/70
4a55219
Thu 16 May 2024 03:58:09 PM UTC: 
 sudoku.c | 42 +++++++++++++++++++++++-------------------
 1 file changed, 23 insertions(+), 19 deletions(-)
 tests:  2|4
total_score: 15/70
82b0a32
Thu 16 May 2024 04:04:26 PM UTC: 
 sudoku.c | 24 ++++++++++++++++++++----
 1 file changed, 20 insertions(+), 4 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:72:38: error: ‘y’ undeclared (first use in this function)
   72 |               if(columnas[n->sudo[x][y]]==1)
      |                                      ^
sudoku.c:72:38: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:64:15: error: variable ‘columnas’ set but not used [-Werror=unused-but-set-variable]
   64 |           int columnas[10] = {0};
      |               ^~~~~~~~
sudoku.c:46:16: error: variable ‘largo’ set but not used [-Werror=unused-but-set-variable]
   46 |   int i, j, k, largo;
      |                ^~~~~
sudoku.c:46:13: error: unused variable ‘k’ [-Werror=unused-variable]
   46 |   int i, j, k, largo;
      |             ^
cc1: all warnings being treated as errors
Compilation failed
7b33a63
Thu 16 May 2024 04:04:35 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:53:7: error: ‘largo’ undeclared (first use in this function)
   53 |       largo = 0;
      |       ^~~~~
sudoku.c:53:7: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:72:38: error: ‘y’ undeclared (first use in this function)
   72 |               if(columnas[n->sudo[x][y]]==1)
      |                                      ^
sudoku.c:64:15: error: variable ‘columnas’ set but not used [-Werror=unused-but-set-variable]
   64 |           int columnas[10] = {0};
      |               ^~~~~~~~
sudoku.c:46:13: error: unused variable ‘k’ [-Werror=unused-variable]
   46 |   int i, j, k;
      |             ^
cc1: all warnings being treated as errors
Compilation failed
8e04b77
Thu 16 May 2024 04:04:47 PM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:71:38: error: ‘y’ undeclared (first use in this function)
   71 |               if(columnas[n->sudo[x][y]]==1)
      |                                      ^
sudoku.c:71:38: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:63:15: error: variable ‘columnas’ set but not used [-Werror=unused-but-set-variable]
   63 |           int columnas[10] = {0};
      |               ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
effa4ac
Thu 16 May 2024 04:05:04 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
eadd821
Sun 19 May 2024 03:16:09 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|3
total_score: 35/70
ceef1cd
Sun 19 May 2024 03:16:32 AM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|3
total_score: 35/70
c9a8cc2
Sun 19 May 2024 03:16:50 AM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
f9d7a02
Sun 19 May 2024 03:17:04 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
a5170e2
Sun 19 May 2024 03:18:59 AM UTC: 
 sudoku.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
50e3937
Sun 19 May 2024 03:22:33 AM UTC: 
 sudoku.c | 25 ++++++++++++++++++++++++-
 1 file changed, 24 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:121:29: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
  121 |       Node *adjNode = first(list);
      |                             ^~~~
      |                             List
sudoku.c:121:29: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
acef354
Sun 19 May 2024 03:22:42 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7c4b772
Sun 19 May 2024 03:23:14 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1699e7b
Sun 19 May 2024 03:23:57 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
8f8a61b
Sun 19 May 2024 03:26:55 AM UTC: 
 sudoku.c | 11 +++--------
 1 file changed, 3 insertions(+), 8 deletions(-)
 tests:  7|2
total_score: 50/70
9ff018d
